# haskell-game-of-life

./: Dockerfile.ns  docker-compose.yml  game-of-life.cabal
src/: Game.hs  Main.hs
test/: GameSpec.hs
