name:                game-of-life
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/pvdvreede/haskell-game-of-life
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable gol
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , matrix ==0.3.4.4

test-suite tests
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -fwarn-tabs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , game-of-life
                     , hspec ==2.2.0
